--- a/settings-pages/css/base.css
+++ b/settings-pages/css/base.css
@@ -1,6 +1,3 @@
-/* Reset and base styles */
-
-/* CSS Reset */
 *,
 *::before,
 *::after {
@@ -141,7 +138,7 @@ img {
 }
 
 .container {
-  display: flex;
+  display: block;
   overflow: hidden;
 }
 
